@@ -1,0 +1,1 @@
+Bone Lacing now increases your BOD instead of just increasing your damage resistance pool.
