@@ -1,0 +1,1 @@
+Versucht alle durch Pegasus in den deutschen Regelwerken eingeführten Änderungen zu implementieren.
